force-app/main/default/objects/vlocity_cmt__VlocityContractServiceLog__c/fields/vlocity_cmt__DateTimeAccepted__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DateTimeAccepted__c</fullName>
    <description>DateTime job execution accepted</description>
    <label>DateTime Accepted</label>
    <type>DateTime</type>
</CustomField>