force-app/main/default/objects/vlocity_cmt__VlocityContractServiceLog__c/fields/vlocity_cmt__DateTimeStarted__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DateTimeStarted__c</fullName>
    <description>DateTime job execution started</description>
    <label>DateTime Started</label>
    <type>DateTime</type>
</CustomField>