force-app/main/default/objects/vlocity_cmt__VlocityContractServiceLog__c/fields/vlocity_cmt__JobType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__JobType__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SubscribeTenant</fullName>
                <label>Subscribe Tenant to Service</label>
            </value>
            <value>
                <fullName>UnsubscribeTenant</fullName>
                <label>Unsubscribe Tenant from Service</label>
            </value>
            <value>
                <fullName>CleanupTenantResources</fullName>
                <label>Cleanup Tenant Resources</label>
            </value>
            <value>
                <fullName>CreateTemplate</fullName>
                <label>Publish Template</label>
            </value>
            <value>
                <fullName>CreateTemplateAsync</fullName>
                <label>Publish Template (Async)</label>
            </value>
            <value>
                <fullName>UpsertTemplate</fullName>
                <label>Republish Template</label>
            </value>
            <value>
                <fullName>UpsertTemplateAsync</fullName>
                <label>Republish Template (Async)</label>
            </value>
            <value>
                <fullName>DeleteTemplate</fullName>
                <label>Delete Template</label>
            </value>
            <value>
                <fullName>GenerateDocx</fullName>
                <default>true</default>
                <label>Generate DOCX</label>
            </value>
            <value>
                <fullName>GenerateDocxAsync</fullName>
                <label>Generate DOCX (Async)</label>
            </value>
            <value>
                <fullName>GeneratePptx</fullName>
                <label>Generate PPTX</label>
            </value>
            <value>
                <fullName>GeneratePptxAsync</fullName>
                <label>Generate PPTX (Async)</label>
            </value>
            <value>
                <fullName>GeneratePdf</fullName>
                <label>Generate PDF</label>
            </value>
            <value>
                <fullName>GeneratePdfAsync</fullName>
                <label>Generate PDF (Async)</label>
            </value>
            <value>
                <fullName>CreateContract</fullName>
                <label>Create Contract</label>
            </value>
            <value>
                <fullName>SendEnvelope</fullName>
                <label>Send Envelope</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>