force-app/main/default/objects/vlocity_cmt__VlocityContractServiceLog__c/fields/vlocity_cmt__ResponseData__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ResponseData__c</fullName>
    <label>Response Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>